Fix spacing between icon and text

--- a/src/components/EditableText/EditableText.css
+++ b/src/components/EditableText/EditableText.css
@@ -12,7 +12,7 @@
 }
 
 .y-editableText--clickableText {
-  padding-left: 0.1rem;
+  padding-left: 0.2rem;
 }
 
 .y-editableText--clickable:active > .y-editableText--clickableText,
